[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="un_pause" type="Button" parent="."]
margin_left = 426.631
margin_top = 118.928
margin_right = 598.631
margin_bottom = 176.928
text = "Unpause"

[node name="reset_to_checkpoint" type="Button" parent="."]
margin_left = 447.081
margin_top = 239.674
margin_right = 599.081
margin_bottom = 297.674
text = "checkpoint"

[node name="move_to_level_select" type="Button" parent="."]
margin_left = 419.08
margin_top = 362.447
margin_right = 627.08
margin_bottom = 454.447
text = "level_select"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 428.519
margin_top = 485.151
margin_right = 646.519
margin_bottom = 552.151
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="un_pause" to="." method="_on_un_pause_button_down"]
[connection signal="button_down" from="reset_to_checkpoint" to="." method="_on_reset_to_checkpoint_button_down"]
[connection signal="button_down" from="move_to_level_select" to="." method="_on_move_to_level_select_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
